...
        FeatureAvailabilityStatus.unsupportedDevice => '当前手表不支持此功能',
        FeatureAvailabilityStatus.serviceUnavailable => '此功能暂时无法使用，请稍后再试',
      };
}

enum DeviceFeature {
  watchFaces('watch_faces', '表盘中心'),
  photoWatchFace('photo_watch_face', '照片表盘'),
  findWatch('find_watch', '查找手表'),
  camera('camera', '相机遥控'),
  phoneCalls('phone_calls', '电话'),
  contacts('contacts', '常用联系人'),
  notifications('notifications', '消息通知'),
...
